# Graphics

./: .gitignore  CMakeLists.txt  ReadMe.txt  ssdr.cpp  ssdr.h  svg_parser.cpp  svg_parser.h
src/: solve_it.cpp  solve_it.hpp  ssdr-old.cpp  ssdr-old.h  ssdr.cpp  ssdr.h  svg_parser-2.cpp  svg_parser.cpp  svg_parser.h
